engine/baml-lib/baml/tests/validation_files/generators/error.baml
generator default {
  language python
  o o
}

// error: Property not known: "o". Did you mean one of these: "output", "language", "project_root", "pkg_manager", "python_setup_prefix"?
//   -->  generators/error.baml:3
//    | 
//  2 |   language python
//  3 |   o o
//    | 
